# SmashOrTransformer

./: .gitignore  MODELS.md  README.md  download_images.py  download_models.py  pack_release.py  pokemon_names.csv  pokesmash_votes.csv  pyproject.toml  scrape_pokesmash.py  slice_battle_bgs.py
.playwright-mcp/: page-2026-06-14T14-43-32-514Z.yml  page-2026-06-14T14-43-48-547Z.yml  page-2026-06-14T14-46-28-850Z.yml
configs/: booru_only.json  example.json  example_mixed.json  mixed_v2.json  train_example.json  train_mixed.json  train_mixed_v2.json
data_prep/: __init__.py  augmentations.py  booru.py  config.py  imagestore.py  prepare.py  sampler.py  sampling.py  selection.py  splits.py
docs/: vit_small_mixed_v1.md  vit_small_portraits_v1.md
gimmicks/: __init__.py  discord_bot.py  score_image_app.py  settings.json
model/: __init__.py  acti_maxim.py  calibrate.py  compare_sources.py  config.py  cross_eval.py  dataset.py  dream_diffusion.py  infer.py  loss.py  metrics.py  model.py  results.py  score_booru.py  score_folder.py  score_image_app.py  stats.py  train.py
smash_or_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_augmentations.py  test_booru.py  test_config.py  test_dream_diffusion.py  test_gimmicks_discord_bot.py  test_gimmicks_score_image_app.py  test_imagestore.py  test_model_acti_maxim.py  test_model_calibrate.py  test_model_compare_sources.py  test_model_config.py  test_model_dataset.py  test_model_infer.py  test_model_loss.py  test_model_metrics.py  test_model_net.py  test_model_results.py  (+10 more)
(+8 files in other folders)
