[project]
name = "smash-or-transformer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pillow>=10.0", "timm>=1.0", "scipy>=1.11", "tqdm>=4.66", "requests>=2.31", "tkinterdnd2>=0.4"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["data_prep*", "model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
